--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 	<title>Hello World</title>
+	<style type="text/css">
+		h1{
+			color: red;
+		}
+		body{
+			background-color: rgb(244, 244, 117);
+		}
+	</style>
 </head>
 <body>
 <h1>Hello!!! This is Susan...</h1>
+<img src="https://scontent.fdad1-1.fna.fbcdn.net/v/t1.0-9/20258291_751226295057171_7454321834406497293_n.jpg?oh=7b0e2786929d25a625865112a34b6a96&oe=5A23BB4F">
+<h2>About me</h2>
+<p>[Updating]</p>
+<h2>Education</h2>
+<p>[Updating]</p>
+<h2>Experience</h2>
+<p>[Updating]</p>
 </body>
 </html>
