--- a/site/index.html
+++ b/site/index.html
@@ -14,12 +14,30 @@
 </head>
 <body>
 <h1>Hello!!! This is Susan...</h1>
+<ol>
+	<li><a href="#about-me">About me</a></li>
+	<li><a href="#edu">Education</a></li>
+	<li> <a href="#exp">Experience</a></li>
+	<li><a href="#interest">Interest</a></li>
+</ol>
 <img src="https://scontent.fdad1-1.fna.fbcdn.net/v/t1.0-9/20258291_751226295057171_7454321834406497293_n.jpg?oh=7b0e2786929d25a625865112a34b6a96&oe=5A23BB4F">
-<h2>About me</h2>
+<h2 id="about-me">About me</h2>
+<ul>
+	<li>Full name: Bùi Thị Mỹ Tú</li>
+	<li>Other names: Susan</li>
+	<li>D.O.B: 22/08/1998</li>
+	<li>Nationality: Vietnam</li>
+</ul>
+<p>A self-driven, motivated student seeks the opportunities to broaden knowledge, gain experience, and discover herself.</p>
+<h2 id="edu">Education</h2>
+<ul>
+	<li>Studying at FPT University HCMC (class of 2020).<br>
+        Bachelor of Business Administration.</li>
+    <li>Graduated from Le Quy Don High School For Gifted Students, Binh Dinh.</li>
+</ul>
+<h2 id="exp">Experience</h2>
 <p>[Updating]</p>
-<h2>Education</h2>
-<p>[Updating]</p>
-<h2>Experience</h2>
+<h2 id="interest">Interest</h2>
 <p>[Updating]</p>
 </body>
 </html>
