--- a/site/index.html
+++ b/site/index.html
@@ -6,9 +6,17 @@
 	<style type="text/css">
 		h1{
 			color: red;
+			text-align: center;
 		}
 		body{
 			background-color: rgb(244, 244, 117);
+			font-family: monospace;
+		}
+		a{
+			text-decoration: none;
+		}
+		#susan{
+			align-items: center;
 		}
 	</style>
 </head>
@@ -20,7 +28,7 @@
 	<li> <a href="#exp">Experience</a></li>
 	<li><a href="#interest">Interest</a></li>
 </ol>
-<img src="https://scontent.fdad1-1.fna.fbcdn.net/v/t1.0-9/20258291_751226295057171_7454321834406497293_n.jpg?oh=7b0e2786929d25a625865112a34b6a96&oe=5A23BB4F">
+<img id="susan" src="https://scontent.fdad1-1.fna.fbcdn.net/v/t1.0-9/20258291_751226295057171_7454321834406497293_n.jpg?oh=7b0e2786929d25a625865112a34b6a96&oe=5A23BB4F">
 <h2 id="about-me">About me</h2>
 <ul>
 	<li>Full name: Bùi Thị Mỹ Tú</li>
