--- a/site/index.html
+++ b/site/index.html
@@ -15,8 +15,21 @@
 		a{
 			text-decoration: none;
 		}
+		#biography{
+			background: grey;
+			width: 30%;
+			height: 400px;
+			overflow: auto;
+			border: 5px dashed;
+			float: right;
+		}
 		#susan{
-			align-items: center;
+			width: 200px;
+			height: 200px;
+			margin: auto;
+			float: left;
+			padding: 20px;
+			
 		}
 	</style>
 </head>
@@ -28,7 +41,7 @@
 	<li> <a href="#exp">Experience</a></li>
 	<li><a href="#interest">Interest</a></li>
 </ol>
-<img id="susan" src="https://scontent.fdad1-1.fna.fbcdn.net/v/t1.0-9/20258291_751226295057171_7454321834406497293_n.jpg?oh=7b0e2786929d25a625865112a34b6a96&oe=5A23BB4F">
+<div id="biography">
 <h2 id="about-me">About me</h2>
 <ul>
 	<li>Full name: Bùi Thị Mỹ Tú</li>
@@ -47,5 +60,6 @@
 <p>[Updating]</p>
 <h2 id="interest">Interest</h2>
 <p>[Updating]</p>
+</div>
 </body>
 </html>
