--- a/site/index.html
+++ b/site/index.html
@@ -7,16 +7,19 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<script scr="js/jquery-3.2.1.min.js"></script>
+<!-- <script scr="js/jquery-3.2.1.min.js"></script>
 <script scr="js/bootstrap.min.js"></script>
-<script scr="js/script.js"></script>
+<script scr="js/script.js"></script> -->
 <header>
 	<nav id = "main-nav" class="navbar navbar-default">
+	    <a href="index.html" class="">
+	    	<div id="logo-img" alt="ypa"></div>
+	    </a>
 		<ul class="menu">
-	<li><a href="#about-me">About me</a></li>
-	<li><a href="#edu">Education</a></li>
-	<li> <a href="#exp">Experience</a></li>
-	<li><a href="#interest">Interest</a></li>
+		     <li><a href="#about-me">About me</a></li>
+	         <li><a href="#edu">Education</a></li>
+	         <li> <a href="#exp">Experience</a></li>
+	         <li><a href="#interest">Interest</a></li>
         </ul>
 	</nav>
 </header>
@@ -24,12 +27,11 @@
 <div id="biography">
 <h2 id="about-me">About me</h2>
 <ul>
-	<li>Full name: Bùi Thị Mỹ Tú</li>
-	<li>Other names: Susan</li>
-	<li>D.O.B: 22/08/1998</li>
-	<li>Nationality: Vietnam</li>
+	<li>Full name: Bùi Thị Mỹ Tú</li><br>
+	<li>Other names: Susan</li><br>
+	<li>D.O.B: 22/08/1998</li><br>
+	<li>Nationality: Vietnam</li><br>
 </ul>
-<p>A self-driven, motivated student seeks the opportunities to broaden knowledge, gain experience, and discover herself.</p>
 <h2 id="edu">Education</h2>
 <ul>
 	<li>Studying at FPT University HCMC (class of 2020).<br>
@@ -41,7 +43,5 @@
 <h2 id="interest">Interest</h2>
 <p>[Updating]</p>
 </div>
-<div id="content"></div>
-<div id="footer"></div>
 </body>
 </html>
